# clay

./: .gitignore  BACKLOG.md  BUILD_SUMMARY.md  CLAUDE.md  CONVERGENCE_ANALYSIS.md  ENERGY_ANALYSIS.md  FORCE_DIRECTED_RESULTS.md  LICENSE  OPTIMIZATION_INVESTIGATION.md  README.md  TODO.md  analyze_convergence.py  compare_penalties.py  examples.py  examples.sh  main.py  monitor_layout.py  pyproject.toml  smooth_overlap_design.md
clay/: __init__.py  __main__.py  config.py  geometry.py  graph.py  layout.py  parser.py
clay/diagnostics/: __init__.py  energy_plot.py  report.py
clay/layout/: __init__.py  energy.py  engines.py  random.py  ranked.py
clay/penalties/: __init__.py  area.py  chain_collinearity.py  edge_cross.py  node_edge.py  spacing.py
clay/render/: matplot.py
examples/: architecture.clay  chain.clay  cycle.clay  diamond.clay  example1.py  example1.yaml  example2.py  example2.yaml  example3.py  example4.py  example4.yaml  example5.py  example5.yaml  flowchart.clay  simple.clay  state_machine.clay  workflow.clay  yshape.clay
examples/easy/: example3.yaml  example4.yaml
examples/hard/: example5.yaml
tests/: test_geometry.py  test_input.clay  test_layout.py  test_parser.py
tests/penalties/: test_chain_collinearity.py  test_edge_cross.py  test_node_edge.py  test_spacing.py
