[project]
name = "clay"
version = "0.1.0"
description = "CLay - Claude's Layout algorithm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "scalene>=1.5.55",
]
