[project]
name = "clay"
version = "0.1.0"
description = "CLay - Claude's Layout algorithm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "scalene>=1.5.55",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (let formatter handle it)
]

[tool.ruff.lint.isort]
known-first-party = ["clay"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["clay", "tests", "main.py"]
exclude = [".venv"]
